--- a/Standing Desk App/sda_config.plist
+++ b/Standing Desk App/sda_config.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>IdlePauseTime</key>
+	<key>SnoozeTime</key>
 	<integer>300</integer>
+	<key>IdlePauseTime</key>
+	<integer>600</integer>
 	<key>SitStateInterval</key>
 	<integer>900</integer>
 	<key>StandStateInterval</key>
