set alert sound files default to blank

--- a/Standing Desk App/sda_config.plist
+++ b/Standing Desk App/sda_config.plist
@@ -15,14 +15,14 @@
 		<key>Volume</key>
 		<real>0.5</real>
 		<key>SoundFile</key>
-		<string>Sound.wav</string>
+		<string></string>
 	</dict>
 	<key>SitAlert</key>
 	<dict>
 		<key>Volume</key>
 		<integer>1</integer>
 		<key>SoundFile</key>
-		<string>Sound.wav</string>
+		<string></string>
 	</dict>
 </dict>
 </plist>
