--- a/Standing Desk App/sda_config.plist
+++ b/Standing Desk App/sda_config.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LoginItemStatus</key>
+	<false/>
 	<key>SnoozeTime</key>
 	<integer>300</integer>
 	<key>IdlePauseTime</key>
