added new custom default sounds that are loaded into the main popup buttons and played independently of nsusernotification method (as it doesn’t support that)

--- a/Standing Desk App/sda_config.plist
+++ b/Standing Desk App/sda_config.plist
@@ -19,14 +19,14 @@
 		<key>Volume</key>
 		<integer>1</integer>
 		<key>SoundFile</key>
-		<string>Hero</string>
+		<string>Stand</string>
 	</dict>
 	<key>SitAlert</key>
 	<dict>
 		<key>Volume</key>
 		<integer>1</integer>
 		<key>SoundFile</key>
-		<string>Submarine</string>
+		<string>Sit</string>
 	</dict>
 </dict>
 </plist>
