--- a/Standing Desk App/Standing Desk App-Info.plist
+++ b/Standing Desk App/Standing Desk App-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>logo_sitting.png</string>
+	<string>icon_sitting.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>Puppy-Bongos.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
