--- a/Standing Desk App/sda_config.plist
+++ b/Standing Desk App/sda_config.plist
@@ -28,5 +28,43 @@
 		<key>SoundFile</key>
 		<string>Sit</string>
 	</dict>
+	<key>Presets</key>
+	<dict>
+		<key>Beginner</key>
+		<dict>
+			<key>StandStateInterval</key>
+			<real>1800</real>
+			<key>SitStateInterval</key>
+			<real>3600</real>
+		</dict>
+		<key>Intermediate</key>
+		<dict>
+			<key>StandStateInterval</key>
+			<integer>60</integer>
+			<key>SitStateInterval</key>
+			<integer>60</integer>
+		</dict>
+		<key>Hard</key>
+		<dict>
+			<key>StandStateInterval</key>
+			<integer>120</integer>
+			<key>SitStateInterval</key>
+			<integer>30</integer>
+		</dict>
+		<key>Expert</key>
+		<dict>
+			<key>StandStateInterval</key>
+			<integer>180</integer>
+			<key>SitStateInterval</key>
+			<integer>30</integer>
+		</dict>
+		<key>All Day</key>
+		<dict>
+			<key>StandStateInterval</key>
+			<integer>240</integer>
+			<key>SitStateInterval</key>
+			<integer>30</integer>
+		</dict>
+	</dict>
 </dict>
 </plist>
