Changed sit interval for "All Day" to 0

--- a/Standing Desk App/sda_config.plist
+++ b/Standing Desk App/sda_config.plist
@@ -63,7 +63,7 @@
 			<key>StandStateInterval</key>
 			<real>14440</real>
 			<key>SitStateInterval</key>
-			<real>1800</real>
+			<integer>0</integer>
 		</dict>
 	</dict>
 </dict>
