--- a/Standing Desk App/Standing Desk App-Info.plist
+++ b/Standing Desk App/Standing Desk App-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon_sitting.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>Puppy-Bongos.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
